# n64-systemtest

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  linker.ld  mips-nintendo64-none.json  n64-systemtest.n64  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-rom.yml
builder/: Cargo.toml
builder/src/: main.rs
ipl3_compat/: source.txt
mini-ipl3/: mini-ipl3.s
n64-systemtest/: Cargo.toml  rust-toolchain.toml
n64-systemtest/src/: assembler.rs  boot.s  cop0.rs  cop1.rs  exception_handler.rs  main.rs  memory_map.rs  print.rs  uncached_memory.rs
n64-systemtest/src/graphics/: color.rs  font.rs  framebuffer_console.rs  vi.rs
n64-systemtest/src/math/: mod.rs  soft_float.rs
n64-systemtest/src/rdp/: modes.rs  rdp.rs  rdp_assembler.rs
n64-systemtest/src/rsp/: dmem_writer.rs  mod.rs  rsp.rs  rsp_assembler.rs
n64-systemtest/src/tests/: mod.rs  soft_asserts.rs  testlist.rs
n64-systemtest/src/tests/address_error_exception/: mod.rs
n64-systemtest/src/tests/arithmetic/: mod.rs
n64-systemtest/src/tests/cart_memory/: write.rs
n64-systemtest/src/tests/cop0/: mod.rs
n64-systemtest/src/tests/cop1/: compares.rs  mod.rs
n64-systemtest/src/tests/cop_unusable/: mod.rs
n64-systemtest/src/tests/exception_instructions/: mod.rs
n64-systemtest/src/tests/jumps/: mod.rs
n64-systemtest/src/tests/memory_instructions/: mod.rs
n64-systemtest/src/tests/pif_memory/: mod.rs
n64-systemtest/src/tests/rdp/: filled_triangle.rs  mod.rs
n64-systemtest/src/tests/rsp/: op_addi.rs  op_cfc2_ctc2.rs  op_jal.rs  op_shifts.rs  op_slt.rs  op_sltiu.rs  op_vector_arithmetic.rs  op_vmacq.rs  op_vmudh.rs  stresstests.rs  stresstests_div.rs
n64-systemtest/src/tests/startup/: mod.rs
n64-systemtest/src/tests/tlb/: exceptions.rs  mod.rs
n64-systemtest/src/tests/tlb64/: exceptions.rs  mod.rs
n64-systemtest/src/tests/traps/: mod.rs
src/: allocator.rs  assembler.rs  boot.s  cop0.rs  emux.rs  enum_str.rs  exception_handler.rs  isviewer.rs  main.rs  memory_map.rs  mi.rs  panic.rs  pi.rs  print.rs  sc64.rs  text_out.rs  uncached_memory.rs
src/graphics/: color.rs  cursor.rs  framebuffer_console.rs  framebuffer_images.rs  image.rs  mod.rs  system_font.rs  vi.rs
src/math/: bits.rs  vector.rs
src/rdp/: fixedpoint.rs  mod.rs  modes.rs  rdp.rs  rdp_assembler.rs
src/rsp/: mod.rs  rsp.rs  rsp_assembler.rs  rsp_macros.rs  spmem.rs  spmem_writer.rs
src/tests/: mod.rs  soft_asserts.rs  testlist.rs
src/tests/address_error_exception/: mod.rs
src/tests/arithmetic/: div.rs  ll_sc.rs  mod.rs  nemu_port.rs  shifts.rs
src/tests/cart_memory/: dma.rs  mod.rs  write.rs
src/tests/cop0/: cache_common.rs  dcache_cache.rs  icache_cache.rs  icache_functional.rs  mod.rs
src/tests/cop1/: compares.rs  full_vs_half_mode.rs  mod.rs  randomized.rs
src/tests/cop_unusable/: mod.rs
src/tests/endian_re/: mod.rs
src/tests/exception_instructions/: mod.rs
src/tests/jumps/: conditionals.rs  j_and_jal.rs  jalr.rs  jr_and_jalr.rs  mod.rs
src/tests/mi/: repeat.rs
src/tests/overflow_exception/: mod.rs
src/tests/privilege/: mod.rs
src/tests/rdp/: filled_triangle.rs  mod.rs
src/tests/rsp/: mod.rs  op_add_addu.rs  op_addiu.rs  op_and.rs  op_andi.rs  op_beq.rs  op_bne.rs  op_branches.rs  op_break.rs  op_cfc2_ctc2.rs  op_j.rs  op_jr_jalr.rs  op_lb.rs  op_lbu.rs  op_lh.rs  op_lhu.rs  op_lqv_sqv.rs  op_lw.rs  op_lwu.rs  op_mfc2_mtc2.rs  op_nor.rs  op_or.rs  op_ori.rs  op_sb.rs  op_sh.rs  op_shifts.rs  op_slti.rs  op_sltiu.rs  op_sltu.rs  op_sub_subu.rs  op_sw.rs  op_vadd.rs  op_vector_arithmetic.rs  op_vector_loads.rs  op_vector_stores.rs  op_vmacf.rs  op_vmacq.rs  op_vmacu.rs  op_vmadh.rs  op_vmadl.rs  (+20 more)
src/tests/sp_memory/: dma.rs  mod.rs
src/tests/startup/: mod.rs
src/tests/tlb/: cross_page_exec.rs  exceptions.rs  mod.rs
src/tests/tlb64/: exceptions.rs  mod.rs
src/tests/traps/: delay.rs  mod.rs
