[package]
name = "n64-systemtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
default_tests = []
vmulf_stress_test = []
vmudh_stress_test = []
vmudm_stress_test = []
vmudn_stress_test = []
vmacf_stress_test = []
vmadh_stress_test = []
vmadm_stress_test = []
vmadn_stress_test = []

[dependencies]
linked_list_allocator = "0.9.0"
spinning_top = "0.2.4"
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }