[package]
name = "n64-systemtest"
version = "2.0.2"
edition = "2021"

[features]
default = ["default_tests"]
default_tests = []
vmulf_stress_test = []
vmulu_stress_test = []
vmulq_stress_test = []
vmudl_stress_test = []
vmudh_stress_test = []
vmudm_stress_test = []
vmudn_stress_test = []
vmacf_stress_test = []
vmacu_stress_test = []
vmadl_stress_test = []
vmadh_stress_test = []
vmadm_stress_test = []
vmadn_stress_test = []
vrcp32_stress_test = []
vrsq32_stress_test = []
rcp_rsq_dump = []
cop1_stress_test = []

[profile.dev]
# Using the default level 0 for this profile, causes rust-lld to throw the error "PC offset is too large" with a 64-bit address.
# This probably occurs because the current architecture target is set as a 32-bit system (attempting to use 64-bit will cause other compiler problems).
opt-level = 1

[dependencies]
linked_list_allocator = "0.9.0"
spinning_top = "0.2.4"
arrayref = "0.3.6"
oorandom = { version = "11.1.3", default-features = false }
arbitrary-int = "1.1.0"
bitbybit = "1.0.0"