[package]
name = "n64-systemtest"
version = "2.1.0"
edition = "2021"

[features]
# The set of tests that should be included by default
default = ["base"]

# This flag controls whether quick tests are included in the test set. It must be true if any quick test is supposed
# to be run (therefore the next features require it).
# For stresstest builds it is useful to not have this on, so those don't require it
quick = []

# This is the basic set of tests. The majority of tests fall into this category
base = ["quick"]

# Tests that requires emulation of accurate time (e.g. a NOP is 0.5 cycles, Random decrements by 1 per instruction).
timing = ["quick"]

# Tests that require a cycle accurate emulator (where for example some parts of an instruction happen in a later cycle
# than the instruction itself). There isn't much test coverage to fully derive the rules yet (and most likely this
# wouldn't be implementable by a dynamic recompiler), so for now this is disabled by default.
cycle = ["quick"]

# Tests that require a cycle accurate emulator (where for example some parts of an instruction happen in a later cycle
# than the instruction itself). There isn't much test coverage to fully derive the rules yet (and most likely this
# wouldn't be implementable by a dynamic recompiler), so for now this is disabled by default.
cop0hazard = ["quick"]

# Tests that show something weird about the hardware where the pattern isn't fully understood. These tests aren't enough
# to implement in an emulator yet. As more tests for a certain quirk are being written (and the understanding grows),
# they'd move out of this category. Therefore, it is disabled by default and not even reported as disabled.
poorly_understood_quirk = ["quick"]

vmulf_stress_test = []
vmulu_stress_test = []
vmulq_stress_test = []
vmudl_stress_test = []
vmudh_stress_test = []
vmudm_stress_test = []
vmudn_stress_test = []
vmacf_stress_test = []
vmacu_stress_test = []
vmadl_stress_test = []
vmadh_stress_test = []
vmadm_stress_test = []
vmadn_stress_test = []
vrcp32_stress_test = []
vrsq32_stress_test = []
rcp_rsq_dump = []
cop1_stress_test = []

[profile.dev]
# Using the default level 0 for this profile, causes rust-lld to throw the error "PC offset is too large" with a 64-bit address.
# This probably occurs because the current architecture target is set as a 32-bit system (attempting to use 64-bit will cause other compiler problems).
opt-level = 1

[dependencies]
linked_list_allocator = "0.9.0"
spinning_top = "0.2.4"
arrayref = "0.3.6"
oorandom = { version = "11.1.3", default-features = false }
arbitrary-int = "1.1.0"
bitbybit = "1.0.0"