[package]
name = "n64-systemtest"
version = "1.0.11"
edition = "2021"

[features]
default = []
default_tests = []
vmulf_stress_test = []
vmulu_stress_test = []
vmulq_stress_test = []
vmudl_stress_test = []
vmudh_stress_test = []
vmudm_stress_test = []
vmudn_stress_test = []
vmacf_stress_test = []
vmacu_stress_test = []
vmadl_stress_test = []
vmadh_stress_test = []
vmadm_stress_test = []
vmadn_stress_test = []
vrcp32_stress_test = []
vrsq32_stress_test = []
rcp_rsq_dump = []

[dependencies]
linked_list_allocator = "0.9.0"
spinning_top = "0.2.4"
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.3", default-features = false }
arrayref = "0.3.6"
oorandom = { version = "11.1.3", default-features = false }
